[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["BakarDevMaster <ma7260712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
basemodel = "^20190604.1625"

[tool.poetry.scripts]
dev= "todo.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
