[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["BakarDevMaster <ma7260712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
basemodel = "^20190604.1625"
starlette = "^0.37.2"
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}
sqlalchemy = "^2.0.29"
pydantic = "^2.7.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
dev= "todo.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
